methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  var 
  if (estFaceMur()){
    true 
  }
  avance()
  if (getCouleurSol()==Color.green){
    true
  }
  
}